--- a/teams/assets/team.config
+++ b/teams/assets/team.config
@@ -4,7 +4,7 @@ IP_BROKER=127.0.0.1
 PUERTO_BROKER=5003
 POSICIONES_ENTRENADORES=[ [1, 2], [3, 7], [5, 5] ]
 POKEMON_ENTRENADORES=[[Pikachu, Squirtle, Pidgey], [Squirtle, Charmander], [Bulbasaur]]
-OBJETIVOS_ENTRENADORES=[[Pikachu, Pikachu, Squirtle, Pidgey], [Pikachu, Charmander, Charmander], [Squirtle, Bulbasaur]]
+OBJETIVOS_ENTRENADORES=[[Pikachu, Pikachu, Squirtle, Pidgey], [Pikachu, Charmander, Charmander], [Squirtle, Bulbasaur, Lucario]]
 TIEMPO_RECONEXION=30
 RETARDO_CICLO_CPU=2
 ALGORITMO_PLANIFICACION=RR
