Refactor de broker subido al repo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/gameboy/gameboy.o",
+            "program": "${workspaceFolder}/broker/broker",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
