Este reemplaza el anterior commit. No hice git add cuack

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}/broker/broker",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/broker",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
