--- a/teams/assets/team.config
+++ b/teams/assets/team.config
@@ -3,11 +3,11 @@ PUERTO_TEAM=5002
 IP_BROKER=127.0.0.1
 PUERTO_BROKER=5003
 POSICIONES_ENTRENADORES=[1|2,3|7,7|5]
-POKEMON_ENTRENADORES=[Pikachu|Squirtle|Pidgey, Squirtle|Charmander, Bulbasaur]
+POKEMON_ENTRENADORES=[Pikachu|Squirtle|Pidgey, Charmander, Pikachu]
 OBJETIVOS_ENTRENADORES=[Pikachu|Pikachu|Squirtle|Pidgey, Pikachu|Charmander|Charmander,Squirtle|Bulbasaur]
 TIEMPO_RECONEXION=30
 RETARDO_CICLO_CPU=2
-ALGORITMO_PLANIFICACION=RR
+ALGORITMO_PLANIFICACION=FIFO
 QUANTUM=2
 ESTIMACION_INICIAL=0
 LOG_FILE=/home/utnso/log_team1.txt
