Envios y recepcion de akc, se elimina el mensaje de la cuando todos confirman

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,7 +47,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/gameboy/gameboy",
-            "args": ["NEW_POKEMON", "PIKACHU", "5", "25", "10"],
+            "args": ["BROKER", "NEW_POKEMON", "PIKACHU", "5", "25", "10"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/gameboy",
             "environment": [],
