--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "C_Cpp.default.includePath": ["${workspaceFolder}"]
+    "C_Cpp.default.includePath": [
+        "${workspaceFolder}"
+    ],
+    "files.associations": {
+        "typeinfo": "c"
+    }
 }
