--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,33 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-            "name": "Broker",
+
+            "name": "Team",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/broker/broker",
+            "program": "${workspaceFolder}/teams/team",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/broker",
-            "environment": [],
-            "externalConsole": true,
-=======
->>>>>>> c54248850aed009905f92a7e098f7c2ff177276f
-            "name": "Gamecard",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/gamecard/gamecard",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/gamecard",
+            "cwd": "${workspaceFolder}/teams",
             "environment": [],
             "externalConsole": false,
-<<<<<<< HEAD
-=======
->>>>>>> gamecard-hilos
->>>>>>> c54248850aed009905f92a7e098f7c2ff177276f
             "MIMode": "gdb",
             "setupCommands": [
                 {
