--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Broker",
             "type": "cppdbg",
@@ -48,6 +49,25 @@
             "request": "launch",
             "program": "${workspaceFolder}/gameboy/gameboy",
             "args": ["BROKER", "NEW_POKEMON", "PIKACHU", "5", "25", "10"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/gameboy",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "Gameboy/CatchPokemon",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/gameboy/gameboy",
+            "args": ["BROKER", "CATCH_POKEMON", "CHARMANDER", "1", "2"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/gameboy",
             "environment": [],
