--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,26 @@
     "configurations": [
         {
 
+            "name": "Broker",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/broker/broker",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/broker",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+
             "name": "Gamecard",
             "type": "cppdbg",
             "request": "launch",
