--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,26 @@
         },
         {
 
+            "name": "Team",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/teams/team",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/teams",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+
             "name": "Gamecard",
             "type": "cppdbg",
             "request": "launch",
