--- a/gamecard/assets/gamecard.config
+++ b/gamecard/assets/gamecard.config
@@ -7,3 +7,4 @@ TIEMPO_DE_REINTENTO_CONEXION=10
 TIEMPO_DE_REINTENTO_OPERACION=20
 TIEMPO_RETARDO_OPERACION=5
 PUNTO_MONTAJE_TALLGRASS=/home/utnso/Escritorio/tall-grass
+LOG_FILE=/home/utnso/log_gamecard.txt
