--- a/teams/assets/team.config
+++ b/teams/assets/team.config
@@ -10,5 +10,6 @@ TIEMPO_RECONEXION=30
 RETARDO_CICLO_CPU=1
 ALGORITMO_PLANIFICACION=FIFO
 QUANTUM=0
+ALPHA=0.5
 ESTIMACION_INICIAL=5
 LOG_FILE=/home/utnso/log_team1.txt
