--- a/teams/assets/team2.config
+++ b/teams/assets/team2.config
@@ -10,5 +10,6 @@ TIEMPO_RECONEXION=30
 RETARDO_CICLO_CPU=1
 ALGORITMO_PLANIFICACION=RR
 QUANTUM=1
+ALPHA=0.5
 ESTIMACION_INICIAL=5
 LOG_FILE=/home/utnso/log_team2.txt
