--- a/broker/assets/broker.config
+++ b/broker/assets/broker.config
@@ -1,8 +1,9 @@
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
-TAMANO_MEMORIA=2048
-TAMANO_MINIMO_PARTICION=32
+TAMANO_MEMORIA=64
+TAMANO_MINIMO_PARTICION=4
 ALGORITMO_MEMORIA=PARTICIONES
 ALGORITMO_REEMPLAZO=FIFO
 ALGORITMO_PARTICION_LIBRE=FF
-FRECUENCIA_COMPACTACION=3
+IP_BROKER=127.0.0.1
+PUERTO_BROKER=5003
+FRECUENCIA_COMPACTACION=1
+LOG_FILE=./assets/broker.log
