--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,7 +69,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/gameboy/gameboy",
-            "args": ["SUSCRIPTOR", "CATCH_POKEMON"],
+            "args": ["SUSCRIPTOR", "NEW_POKEMON", "10"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/gameboy",
             "environment": [],
