Listo para setear en las VMs

--- a/broker/assets/broker.config
+++ b/broker/assets/broker.config
@@ -3,7 +3,7 @@ TAMANO_MINIMO_PARTICION=4
 ALGORITMO_MEMORIA=PARTICIONES
 ALGORITMO_REEMPLAZO=LRU
 ALGORITMO_PARTICION_LIBRE=FF
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
+IP_BROKER=
+PUERTO_BROKER=
 FRECUENCIA_COMPACTACION=1
 LOG_FILE=./assets/broker.log
