--- a/gameboy/assets/gameboy.config
+++ b/gameboy/assets/gameboy.config
@@ -1,7 +1,7 @@
-IP_GAMECARD=127.0.0.3
-PUERTO_GAMECARD=5001
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
-IP_TEAM=127.0.0.2
-PUERTO_TEAM=5002
+IP_GAMECARD=
+PUERTO_GAMECARD=
+IP_BROKER=
+PUERTO_BROKER=
+IP_TEAM=
+PUERTO_TEAM=
 ID_MODULO=0
