--- a/gamecard/assets/gamecard.config
+++ b/gamecard/assets/gamecard.config
@@ -1,8 +1,8 @@
 ID_MODULE=20
-IP_GAMECARD=127.0.0.3
-PUERTO_GAMECARD=5001
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
+IP_GAMECARD=
+PUERTO_GAMECARD=
+IP_BROKER=
+PUERTO_BROKER=
 TIEMPO_DE_REINTENTO_CONEXION=10
 TIEMPO_DE_REINTENTO_OPERACION=5
 TIEMPO_RETARDO_OPERACION=1
