--- a/teams/assets/team.config
+++ b/teams/assets/team.config
@@ -1,8 +1,8 @@
 ID_MODULE=10
-IP_TEAM=127.0.0.2
-PUERTO_TEAM=5002
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
+IP_TEAM=
+PUERTO_TEAM=
+IP_BROKER=
+PUERTO_BROKER=
 POSICIONES_ENTRENADORES=[1|3,2|3,2|2]
 POKEMON_ENTRENADORES=[Pikachu]
 OBJETIVOS_ENTRENADORES=[Pikachu|Squirtle,Pikachu|Gengar,Squirtle|Onix]
