--- a/teams/assets/team2.config
+++ b/teams/assets/team2.config
@@ -1,8 +1,8 @@
 ID_MODULE=30
-IP_TEAM=127.0.0.4
-PUERTO_TEAM=5002
-IP_BROKER=127.0.0.1
-PUERTO_BROKER=5003
+IP_TEAM=
+PUERTO_TEAM=
+IP_BROKER=
+PUERTO_BROKER=
 POSICIONES_ENTRENADORES=[2|3,6|5,9|9,9|2,2|9]
 POKEMON_ENTRENADORES=[]
 OBJETIVOS_ENTRENADORES=[Vaporeon,Jolteon,Flareon,Umbreon,Espeon]
