--- a/broker/assets/broker.config
+++ b/broker/assets/broker.config
@@ -3,7 +3,7 @@ TAMANO_MINIMO_PARTICION=4
 ALGORITMO_MEMORIA=PARTICIONES
 ALGORITMO_REEMPLAZO=FIFO
 ALGORITMO_PARTICION_LIBRE=FF
-IP_BROKER=
-PUERTO_BROKER=
+IP_BROKER=10.108.48.2
+PUERTO_BROKER=5001
 FRECUENCIA_COMPACTACION=1
 LOG_FILE=./assets/broker.log
