--- a/gameboy/assets/gameboy.config
+++ b/gameboy/assets/gameboy.config
@@ -1,7 +1,7 @@
-IP_GAMECARD=
-PUERTO_GAMECARD=
-IP_BROKER=
-PUERTO_BROKER=
-IP_TEAM=
-PUERTO_TEAM=
+IP_GAMECARD=10.108.48.4
+PUERTO_GAMECARD=5005
+IP_BROKER=10.108.48.2
+PUERTO_BROKER=5001
+IP_TEAM=10.108.48.2
+PUERTO_TEAM=5003
 ID_MODULO=0
