--- a/gamecard/assets/gamecard.config
+++ b/gamecard/assets/gamecard.config
@@ -1,10 +1,10 @@
 ID_MODULE=20
-IP_GAMECARD=
-PUERTO_GAMECARD=
-IP_BROKER=
-PUERTO_BROKER=
+IP_GAMECARD=10.108.48.4
+PUERTO_GAMECARD=5005
+IP_BROKER=10.108.48.2
+PUERTO_BROKER=5001
 TIEMPO_DE_REINTENTO_CONEXION=10
 TIEMPO_DE_REINTENTO_OPERACION=5
 TIEMPO_RETARDO_OPERACION=1
-PUNTO_MONTAJE_TALLGRASS=/home/utnso/Escritorio/tall-grass
-LOG_FILE=/home/utnso/log_gamecard.txt
+PUNTO_MONTAJE_TALLGRASS=./tall-grass
+LOG_FILE=./assets/gamecard.log
