--- a/teams/assets/team.config
+++ b/teams/assets/team.config
@@ -1,8 +1,8 @@
 ID_MODULE=10
-IP_TEAM=
-PUERTO_TEAM=
-IP_BROKER=
-PUERTO_BROKER=
+IP_TEAM=10.108.48.2
+PUERTO_TEAM=5003
+IP_BROKER=10.108.48.2
+PUERTO_BROKER=5001
 POSICIONES_ENTRENADORES=[1|3,2|3,2|2]
 POKEMON_ENTRENADORES=[Pikachu]
 OBJETIVOS_ENTRENADORES=[Pikachu|Squirtle,Pikachu|Gengar,Squirtle|Onix]
@@ -12,4 +12,4 @@ ALGORITMO_PLANIFICACION=FIFO
 QUANTUM=0
 ALPHA=0.5
 ESTIMACION_INICIAL=5
-LOG_FILE=/home/utnso/log_team1.txt
+LOG_FILE=./assets/team1.log
