--- a/teams/assets/team2.config
+++ b/teams/assets/team2.config
@@ -1,8 +1,8 @@
 ID_MODULE=30
-IP_TEAM=
-PUERTO_TEAM=
-IP_BROKER=
-PUERTO_BROKER=
+IP_TEAM=10.108.48.3
+PUERTO_TEAM=5004
+IP_BROKER=10.108.48.2
+PUERTO_BROKER=5001
 POSICIONES_ENTRENADORES=[2|3,6|5,9|9,9|2,2|9]
 POKEMON_ENTRENADORES=[]
 OBJETIVOS_ENTRENADORES=[Vaporeon,Jolteon,Flareon,Umbreon,Espeon]
@@ -12,4 +12,4 @@ ALGORITMO_PLANIFICACION=RR
 QUANTUM=1
 ALPHA=0.5
 ESTIMACION_INICIAL=5
-LOG_FILE=/home/utnso/log_team2.txt
+LOG_FILE=./assets/team2.log
